--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,22 +1,23 @@
-.line {
-    background: #1d68a7;
-    padding: 7.5%;
+header[role="banner"] {
+#logo-main {
+    display: block;
+    margin: 20px auto;
 }
-.vline
-{
-    position:absolute;
-    top:0;
-    left:50%;
-    bottom:0; margin:0;
-    border:none;
-    border-right:solid 2px black;
-    z-index:0;
 }
-.vertical
-{
-    border-left: 6px solid black;
-    height: 350px;
-    left: 50%;
-    justify-self: center;
 
+#navbar-primary.navbar-default {
+    background: transparent !important;
+    border: none !important;
+.navbar-nav {
+    width: 100% !important;
+    text-align: center !important;
+> li {
+    display: inline-block !important;
+    float: none !important;
+> a {
+    padding-left: 30px !important;
+    padding-right: 30px !important;
+}
+}
+}
 }
