--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,101 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+$color_grey: #ec4949;
+$color_green: #993333;
+$color_dark: #1A1A1A;
+$color_light: #FAFAFA;
+$color_background: #2D3235;
+$default_timer: 987ms;
+
+// Resets
+*, *:before, *:after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+// Let's write some real CSS??
+.button {
+    display: flex;
+    cursor: pointer;
+    align-items: center;
+    padding-right: 140px;
+    justify-content: center;
+    padding-top: 50px;
+
+    &:hover {
+        & .button__border-circle {
+            transform: translateX(207px);
+        }
+
+        & .button__mask-circle {
+            clip-path: circle(130px at 207px);
+        }
+    }
+}
+
+.button__text {
+    z-index: 1;
+    font-size: 1.575rem;
+    margin-right: -18px;
+    color: #ec4949;
+    letter-spacing: 0.05em;
+}
+
+.button__wrapper {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.button__arrow {
+    left: 135px;
+    height: 3px;
+    width: 150px;
+    display: flex;
+    position: absolute;
+    align-items: center;
+    background-color: $color_green;
+
+    &:after {
+        content: '';
+        width: 0;
+        height: 0;
+        top: -5px;
+        right: -7px;
+        position: absolute;
+        border-top: 7px solid transparent;
+        border-bottom: 7px solid transparent;
+        border-left: 7px solid $color_green;
+    }
+}
+
+.button__border-circle {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border: 1px solid $color_grey;
+    transition: transform $default_timer;
+}
+
+.button__mask-circle {
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    clip-path: circle(25px);
+    transition: clip-path $default_timer;
+}
+
+.button__small-circle {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    transform: translateX(207px);
+    background-color: $color_green;
+}
